# mazhi-service

./: Cargo.toml  README.md  mazhi.db
src/: config.rs  lib.rs  main.rs  models.rs  storage.rs
