[package]
name = "mazhi-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] } # SQLite crate
serde = { version = "1.0.178", features = ["derive"] }    # 序列化 crate
salvo = "*"
tokio = { version = "*", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
