[package]
name = "mazhi-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = { version = "0.29.0", features = ["bundled"] } # SQLite crate
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
] }
serde = { version = "1.0.178", features = ["derive"] } # 序列化 crate  
serde_json = "1.0.104" # 序列化 crate
chrono = { version = "0.4", features = ["unstable-locales"] } # 时间crate
salvo = "*" # HTTP框架
tokio = { version = "*", features = ["full"] } # 异步运行时
tracing = "0.1" # 日志
tracing-subscriber = "0.3" #日志
